added ycsb container type

--- a/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
@@ -17,6 +17,22 @@ metadata:
     message: "The following service(s) have been created in your project: placeholder.\n\n"
 objects:
 - apiVersion: v1
+  kind: PersistentVolume
+  metadata:
+    name: gluster-default-volume
+    labels:
+      group: nuodb
+  spec:
+    capacity:
+      storage: 100Gi
+    accessModes:
+      - ReadWriteMany
+    glusterfs:
+      endpoints: glusterfs-cluster
+      path: myVol1
+      readOnly: false
+    persistentVolumeReclaimPolicy: Retain
+- apiVersion: v1
   kind: Secret
   metadata:
     name: ${SECRET_NAME}
@@ -83,6 +99,18 @@ objects:
     type: ClusterIP
   status:
     loadBalancer: {}
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    name: gluster-claim
+    labels:
+      group: nuodb
+  spec:
+    accessModes:
+    - ReadWriteMany
+    resources:
+       requests:
+         storage: 10Gi
 - apiVersion: "apps/v1beta1"
   kind: StatefulSet
   metadata:
@@ -159,7 +187,7 @@ objects:
               value: ${FIRST_CLUSTER_API}
           volumeMounts:
           - mountPath: /opt/nuodb/var/opt
-            name: nuoadmin-raft-${NODE_REGION}
+            name: gluster-claim
           readinessProbe:
             initialDelaySeconds: 5
             periodSeconds: 2
@@ -169,20 +197,10 @@ objects:
             httpGet:
               path: /api/1/peers
               port: 8888
-    volumeClaimTemplates:
-    - metadata:
-        name: nuoadmin-raft-${NODE_REGION}
-      spec:
-        selector:
-          app: nuodb
-        labels:
-          app: nuodb
-        storageClassName: ${PVC_CLASS_NAME}
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: ${ADMIN_PVC_SIZE}
+        volumes:
+        - name: gluster-claim
+          persistentVolumeClaim:
+            claimName: gluster-claim
 - apiVersion: "apps/v1beta1"
   kind: StatefulSet
   metadata:
