--- a/OpenShift/NuoDB-Toolkit.yaml
+++ b/OpenShift/NuoDB-Toolkit.yaml
@@ -2,15 +2,14 @@ apiVersion: v1
 kind: Template
 metadata:
   creationTimestamp: null
-  name: nuodb-demo
+  name: toolkit
   labels:
-    template: nuodb-demo
+    template: toolkit
   annotations:
-    openshift.io/display-name: "NouDB Toolkit"
-    description: "Demo toolkit"
+    openshift.io/display-name: "NuoDB Toolkit"
+    description: "NuoDB Toolkit and YCSB load generator"
     iconClass:
     tags: "database,nuodb"
-    openshift.io/long-description: "toolkit"
     openshift.io/provider-display-name: "NuoDB, Inc."
     openshift.io/documentation-url: "http://doc.nuodb.com/Latest/Default.htm"
     openshift.io/support-url: "https://support.nuodb.com/hc/en-us"
@@ -20,12 +19,14 @@ objects:
   kind: DeploymentConfig
   metadata:
     annotations:
-      description: "NuoDB demo toolkit container"
+      description: "Toolkit container"
       template.alpha.openshift.io/wait-for-ready: "true"
     labels:
       app: toolkit
     name: toolkit
   spec:
+    nodeSelector:
+      zone: ${NODE_REGION}
     replicas: 1
     selector:
       app: toolkit
@@ -35,7 +36,7 @@ objects:
       resources: {}
       rollingParams:
         intervalSeconds: 1
-        maxSurge: 25%
+        maxSurge: 100%
         maxUnavailable: 25%
         timeoutSeconds: 600
         updatePeriodSeconds: 1
@@ -50,24 +51,26 @@ objects:
       spec:
         containers:
         - env:
+          - name: YCSB_WORKLOAD
+            value: ${YCSB_WORKLOAD}
           - name: AGENT_PORT
             value: "8888"
-          - name: AGENT
-            value: ${ADMIN_SVC_NAME}
+          - name: PEER_ADDRESS
+            value: ${ADMIN_SVC_NAME}-${NODE_REGION}
           - name: DB_NAME
             valueFrom:
               secretKeyRef:
-                name: nuodb
+                name: ${SECRET_NAME}
                 key: database-name
           - name: DB_USER
             valueFrom:
               secretKeyRef:
-                name: nuodb
+                name: ${SECRET_NAME}
                 key: database-username
           - name: DB_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: nuodb
+                name: ${SECRET_NAME}
                 key: database-password
           - name: NODE_REGION
             value: local
@@ -89,20 +92,32 @@ objects:
         volumes:
         - emptyDir: {}
           name: toolkit-volume-1
-    test: false
 parameters:
   - name: NAMESPACE
     displayName: Namespace
     description: "The OpenShift Namespace where the ImageStream resides."
     value: openshift
+  - name: YCSB_WORKLOAD
+    displayName: YCSB Workload
+    description: "Run YCSB workload against your database. Valid workload options are [a|b|c|d|e|f|g]. Leave blank if using just the Toolkit"
+  - name: NODE_REGION
+    displayName: Deployment Zone
+    description: "Deploy NuoDB to labeled OpenShift Nodes"
+    required: true
+    value: default
   - name: ADMIN_SVC_NAME
     displayName: NuoDB Admin Service Name
-    description: "Service Name to Connect to NuoAdmin."
+    description: "Service Name to Connect to NuoAdmin. Node region parameter will be appended to string"
     required: true
-    value: nuodb-admin-service
+    value: nuodb-svc
+  - name: SECRET_NAME
+    displayName: Secret Name
+    description: "Name of Secret to store database username and password"
+    required: true
+    value: nuodb-secret
   - name: CONTAINER
     displayName: Container Registry
     description: "Registry to pull NuoDB from."
     required: true
-    value: "docker.io/nuodb/nuodb-ee:toolkit-3.1.1-10.3"
+    value: "docker.io/nuodb/nuodb-ee:toolkit-3.1.1-10.6"
 
