fixed selector labels

--- a/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
@@ -296,6 +296,8 @@ objects:
     selector:
       matchLabels:
         affinity: sm
+        app: te-${NODE_REGION}
+        deploymentconfig: te-${NODE_REGION}
     replicas: ${TE_COUNT}
     selector:
       app: te-${NODE_REGION}
