--- a/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     template: nuodb-persisten-storage
   annotations:
-    openshift.io/display-name: "NouDB CE (Persistent)"
+    openshift.io/display-name: "NuoDB CE (Persistent)"
     description: "NuoDB database service, with persistent storage. For more information about using this template, including OpenShift considerations, see https://hub.docker.com/r/nuodb/nuodb-ce/ \n\nWARNING: Any data stored will be lost upon pod destruction. Only use this template for testing"
     iconClass: https://www.nuodb.com/sites/all/themes/nuodb/logo.svg
     tags: "database,nuodb"
@@ -295,14 +295,14 @@ objects:
       zone: ${NODE_REGION}
     selector:
       matchLabels:
-        affinity: sm
+        affinity: te
         app: te-${NODE_REGION}
         deploymentconfig: te-${NODE_REGION}
     replicas: ${TE_COUNT}
     selector:
       app: te-${NODE_REGION}
       deploymentconfig: te-${NODE_REGION}
-      affinity: sm
+      affinity: te
     strategy:
       activeDeadlineSeconds: 21600
       resources: {}
