--- a/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
@@ -367,6 +367,10 @@ objects:
             value: TE
           - name: INSIGHTS_URL
             value: "https://insights-qa.nuodb.com/api/1"
+          - name: YCSB_WORKLOAD
+            value: ${YCSB_WORKLOAD}
+          - name: NO_OF_THREADS
+            value: "10000"
           image: ${CONTAINER}
           imagePullPolicy: IfNotPresent
           name: te-${NODE_REGION}
@@ -460,4 +464,4 @@ parameters:
     displayName: Container Registry
     description: "Registry to pull NuoDB from"
     required: true
-    value: "docker.io/nuodb/nuodb-ee:3.2.0-tgates.4"
+    value: "docker.io/nuodb/nuodb-ee:3.2.0-ycsb.1"
