added workload param

--- a/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-persistent-template.yaml
@@ -473,3 +473,6 @@ parameters:
     displayName: Insights Subscriber ID
     description: "Insights Subscriber ID"
     value: VNB2L0GZW1
+  - name: YCSB_WORKLOAD
+    displayName: "YCSB Workload type"
+    value: b
