--- a/OpenShift/nuodb.3.2-openshift-admin-cns-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-admin-cns-template.yaml
@@ -71,7 +71,7 @@ objects:
 - apiVersion: "apps/v1beta1"
   kind: StatefulSet
   metadata:
-    name: nuoadmin-${NODE_REGION}
+    name: nuoadmin-${NODE_REGION}-${UID}
     labels:
       group: nuodb
       app: nuodb
@@ -198,3 +198,7 @@ parameters:
     description: "Registry to pull NuoDB from"
     required: true
     value: "docker.io/nuodb/nuodb-ee:3.3.0-1548"
+  - name: UID
+    description: "Generate UID for deployment names"
+    generate: expression
+    from: "[a-z]{5}"
