--- a/OpenShift/nuodb.3.2-openshift-sm-ephemeral-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-sm-ephemeral-template.yaml
@@ -38,7 +38,7 @@ objects:
       group: nuodb
       app: nuodb
       deploymentconfig: sm-${NODE_REGION}
-    name: sm-${NODE_REGION}
+    name: sm-${NODE_REGION}-${UID}
   spec:
     selector:
       matchLabels:
@@ -198,3 +198,7 @@ parameters:
     description: "Registry to pull NuoDB from"
     required: true
     value: "docker.io/nuodb/nuodb-ee:3.3.0-1548"
+  - name: UID
+    description: "Generate UID for deployment names"
+    generate: expression
+    from: "[a-z]{5}"
