--- a/OpenShift/nuodb.3.2-openshift-te-ephemeral-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-te-ephemeral-template.yaml
@@ -23,7 +23,7 @@ objects:
       group: nuodb
       app: nuodb
       deploymentconfig: te-${NODE_REGION}
-    name: te-${NODE_REGION}
+    name: te-${NODE_REGION}-${UID}
   spec:
     selector:
       matchLabels:
@@ -147,3 +147,7 @@ parameters:
     description: "Registry to pull NuoDB from"
     required: true
     value: "docker.io/nuodb/nuodb-ee:3.3.0-1548"
+  - name: UID
+    description: "Generate UID for deployment names"
+    generate: expression
+    from: "[a-z]{5}"
