added node selectors

--- a/OpenShift/nuodb.3.2-openshift-sm-ephemeral-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-sm-ephemeral-template.yaml
@@ -71,6 +71,7 @@ objects:
       spec:
         nodeSelector:
           zone: ${NODE_REGION}
+          nodeType: storage
         affinity:
           podAntiAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
