--- a/OpenShift/nuodb.3.2-openshift-te-ephemeral-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-te-ephemeral-template.yaml
@@ -56,6 +56,7 @@ objects:
       spec:
         nodeSelector:
           zone: ${NODE_REGION}
+          nodeType: compute
         affinity:
           podAntiAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
