--- a/OpenShift/nuodb.3.2-openshift-ephemeral-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-ephemeral-template.yaml
@@ -269,6 +269,8 @@ objects:
             value: ${NODE_REGION}
           - name: NODE_TYPE
             value: SM
+          - name: DEFAULT_OPTIONS
+            value: ${DEFAULT_OPTIONS}
           - name: INSIGHTS_URL
             value: "https://insights-qa.nuodb.com/api/1"
           image: ${CONTAINER}
@@ -468,6 +470,11 @@ parameters:
     discription: Local storage path for journal
     required: true
     value: /local-storage/journal
+  - name: DEFAULT_OPTIONS
+    displayName: Default options for Memory and other parameters
+    description: "Set default optional parameters. For eg. database-commit-level safe  mem 8g"
+    required: false
+    value: "mem 8g"
   - name: PVC_CLASS_NAME
     displayName: Persistent Storage Class Name
     desicrption: "Name of Storage Class for persistent storage"
