--- a/OpenShift/nuodb.3.2-openshift-te-ephemeral-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-te-ephemeral-template.yaml
@@ -74,7 +74,7 @@ objects:
           - name: API_PORT
             value: "8888"
           - name: SUB_ID
-            value: VNB2L0GZW1
+            value: ${SUB_ID}
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}-${NODE_REGION}
           - name: DB_NAME
@@ -134,6 +134,10 @@ parameters:
     description: "Service Name to Connect to NuoAdmin. Node region parameter will be appended to string"
     required: true
     value: nuodb-svc
+  - name: SUB_ID
+    displayName: Insights Subscriber ID
+    description: "Insights Subscriber ID"
+    value: VNB2L0GZW1
   - name: TE_COUNT
     displayName: Number of Transaction Engines nodes to Launch
     description: "Start NuoDB with a specific number of TEs"
