--- a/OpenShift/nuodb.3.2-openshift-sm-ephemeral-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-sm-ephemeral-template.yaml
@@ -89,7 +89,7 @@ objects:
           - name: API_PORT
             value: "8888"
           - name: SUB_ID
-            value: VNB2L0GZW1
+            value: ${SUB_ID}
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}-${NODE_REGION}
           - name: DB_NAME
@@ -177,6 +177,10 @@ parameters:
     description: "Start NuoDB with a specific number of NuoADMINs"
     required: true
     value: "3"
+  - name: SUB_ID
+    displayName: Insights Subscriber ID
+    description: "Insights Subscriber ID"
+    value: VNB2L0GZW1
   - name: SM_COUNT
     displayName: Number of Storage Managers nodes to Launch
     description: "Start NuoDB with a specific number of SMs"
