checking in initial templates

--- a/Kubernetes/nuodb-kube-admin-ephemeral-template.yaml
+++ b/Kubernetes/nuodb-kube-admin-ephemeral-template.yaml
@@ -55,6 +55,8 @@ kind: StatefulSet
 metadata:
   namespace: demo
   name: nuoadmin-us-east-2a
+  labels:
+    group: nuodb
 spec:
   serviceName: "nuoadmin-dns"
   replicas: 3
