--- a/Kubernetes/nuodb-kube-te-ephemeral-template.yaml
+++ b/Kubernetes/nuodb-kube-te-ephemeral-template.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   namespace: demo
   name: te-us-east-2a
+  labels:
+    group: nuodb
 spec:
   replicas: 2
   selector:
