--- a/Kubernetes/nuodb-kube-admin-ephemeral-template.yaml
+++ b/Kubernetes/nuodb-kube-admin-ephemeral-template.yaml
@@ -72,7 +72,7 @@ spec:
     spec:
       containers:
       - name: nuoadmin-us-east-2a
-        image: docker.io/nuodb/nuodb-ee:3.3.0-1548
+        image: docker.io/nuodb/nuodb-ee:3.3.0-master-5609
         ports:
         - containerPort: 8888
           name: api
