--- a/Kubernetes/nuodb-kube-te-ephemeral-template.yaml
+++ b/Kubernetes/nuodb-kube-te-ephemeral-template.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: te-us-east-2a
-        image: docker.io/nuodb/nuodb-ee:3.3.0-1548
+        image: docker.io/nuodb/nuodb-ee:3.3.0-master-5609
         env:
         - name: API_PORT
           value: "8888"
