updated sub_id and container

--- a/OpenShift/nuodb.3.2-openshift-ephemeral-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-ephemeral-template.yaml
@@ -246,8 +246,6 @@ objects:
         - env:
           - name: API_PORT
             value: "8888"
-          - name: SUB_ID
-            value: ${SUB_ID}
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}-${NODE_REGION}
           - name: DB_NAME
@@ -356,8 +354,6 @@ objects:
         - env:
           - name: API_PORT
             value: "8888"
-          - name: SUB_ID
-            value: VNB2L0GZW1
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}-${NODE_REGION}
           - name: DB_NAME
@@ -474,7 +470,7 @@ parameters:
   - name: SUB_ID
     displayName: Insights Subscriber ID
     description: "Insights Subscriber ID"
-    value: VNB2L0GZW1
+    value:
   - name: PVC_CLASS_NAME
     displayName: Persistent Storage Class Name
     desicrption: "Name of Storage Class for persistent storage"
@@ -484,7 +480,7 @@ parameters:
     displayName: Container Registry
     description: "Registry to pull NuoDB from"
     required: true
-    value: "docker.io/nuodb/nuodb-ee:3.3.0-1548"
+    value: "docker.io/nuodb/nuodb-ee:3.3.0-master-5609"
   - name: UID
     description: "Generate UID for deployment names"
     generate: expression
