--- a/OpenShift/nuodb.3.2-openshift-admin-cns-template.yaml
+++ b/OpenShift/nuodb.3.2-openshift-admin-cns-template.yaml
@@ -189,7 +189,7 @@ parameters:
   - name: SUB_ID
     displayName: Insights Subscriber ID
     description: "Insights Subscriber ID"
-    value: VNB2L0GZW1
+    value:
   - name: ADMIN_COUNT
     displayName: Number of NuoADMIN nodes to Launch
     description: "Start NuoDB with a specific number of NuoADMINs"
@@ -204,7 +204,7 @@ parameters:
     displayName: Container Registry
     description: "Registry to pull NuoDB from"
     required: true
-    value: "docker.io/nuodb/nuodb-ee:3.3.0-1548"
+    value: "docker.io/nuodb/nuodb-ee:3.3.0-master-5609"
   - name: UID
     description: "Generate UID for deployment names"
     generate: expression
